adds minor changes

--- a/css/MobileView.css
+++ b/css/MobileView.css
@@ -147,9 +147,12 @@
     transition: color 0.4s ease;
   }
   .carousel-view {
-    height: 780px;
+    height: 650px;
   }
   .carousel-item {
+    position: absolute;
+    bottom: -820px;
+    height: 500px;
     margin: 0;
     padding: 0;
   }
