--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -627,6 +627,7 @@ h4 {
   align-items: center;
   gap: 30px;
   width: 1300px;
+  height: auto;
   margin-top: 20px;
   margin-left: 400px;
   animation: topFade 2s;
@@ -639,6 +640,6 @@ h4 {
   transition: transform 0.3s;
 }
 .cert-img:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
   cursor: pointer;
 }
