--- a/css/MobileView.css
+++ b/css/MobileView.css
@@ -291,4 +291,17 @@
   .resume-container-right {
     height: 100%;
   }
+  /* CERTIFICATES HTML */
+  .cert-div {
+    display: flex;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0 0 0 12px;
+  }
+  .cert-div h2 {
+    margin-bottom: 0;
+  }
+  .cert-img {
+    width: 28%;
+  }
 }
