--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -1,3 +1,4 @@
+/* For 1080 resolution */
 * {
   font-family: "Poppins", sans-serif;
 }
@@ -642,4 +643,75 @@ h4 {
 .cert-img:hover {
   transform: scale(1.3);
   cursor: pointer;
+}
+/* Project HTML */
+.project-container {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  align-items: center;
+  height: auto;
+  width: 1400px;
+  margin-left: 340px;
+  margin-top: 50px;
+}
+.project-container h2 {
+  align-self: flex-start;
+  margin-bottom: 0;
+}
+.project-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border: 1px solid black;
+  padding: 20px;
+  width: 1100px;
+  height: 700px;
+  border-radius: 50px;
+  box-shadow: 10px 10px 5px lightgray;
+}
+.project-section h3 {
+  align-self: center;
+}
+.project-section img {
+  box-shadow: 10px 10px 5px lightgray;
+  border: 1px solid lightgray;
+}
+.row-split {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+.digiserve {
+  width: 900px;
+}
+.datacom {
+  height: 600px;
+  width: 600px;
+}
+
+.project-section:nth-child(5) {
+  justify-content: center;
+  width: 1320px;
+  height: 690px;
+}
+
+.project-section:nth-child(6) {
+  width: 1320px;
+  height: 660px;
+  margin-bottom: 20px;
+}
+
+.row-split p {
+  font-size: larger;
+  text-align: justify;
+  width: 50%;
+  line-height: 40px;
+}
+
+@media screen and (min-width: 451px) {
+  .menu-wrap {
+    display: none;
+  }
 }
