--- a/css/MobileView.css
+++ b/css/MobileView.css
@@ -319,19 +319,25 @@
     margin: 0;
     padding: 10px;
     width: 350px;
-    height: 960px;
+    height: 1005px;
   }
   .row-split {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    align-content: flex-start;
+    align-items: center;
+    align-content: center;
     font-size: small;
     gap: 0;
   }
   .row-split p {
     line-height: 30px;
     width: 100%;
+  }
+  .mid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
   }
   .row-split img {
     width: 300px;
@@ -343,7 +349,7 @@
     margin: 0;
     padding: 10px;
     width: 350px;
-    height: 820px;
+    height: 875px;
   }
   .project-section:nth-child(5) {
     display: flex;
