--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -732,7 +732,7 @@ h4 {
   height: 20px;
 }
 
-@media screen and (min-width: 451px) {
+@media only screen and (min-width: 1080px) {
   .menu-wrap {
     display: none;
   }
