--- a/css/MobileView.css
+++ b/css/MobileView.css
@@ -28,6 +28,18 @@
     padding: 0;
     margin: 0;
   }
+  .jas {
+    margin-left: 73px;
+    margin-top: 0px;
+    color: #040b14;
+  }
+  .profile-pic {
+    margin-left: 113px;
+  }
+  .soc-med {
+    margin-left: 73px;
+    margin-bottom: 30px;
+  }
   /* FLOATING MENU BAR */
   .menu-wrap {
     position: fixed;
@@ -141,8 +153,8 @@
   .menu-wrap .menu > div > div > ul > li {
     list-style: none;
     color: rgba(4, 11, 20, 1);
-    font-size: 20px;
-    padding: 2px;
+    font-size: 18px;
+    margin-bottom: 25px;
   }
   .menu-wrap .menu > div > div > ul > li > a {
     color: inherit;
