adds minor changes

--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -693,6 +693,11 @@ h4 {
 .noLine {
   text-decoration: none;
 }
+.project-section:nth-child(4) {
+  justify-content: center;
+  width: 1110px;
+  height: 490px;
+}
 .project-section:nth-child(5) {
   justify-content: center;
   width: 1320px;
