--- a/css/LaptopView.css
+++ b/css/LaptopView.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1366px) {
+/* @media screen and (max-width: 1366px) {
   .header-container {
     zoom: 80%;
     margin-left: 390px;
@@ -39,4 +39,4 @@
     zoom: 75%;
     margin-left: 50px;
   }
-}
+} */
