--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -139,7 +139,7 @@ p {
   justify-content: center;
   align-content: center;
   align-items: center;
-  padding-left: 150px;
+  margin-left: 150px;
   margin-top: 170px;
 }
 
