adds icon in about me page

--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -311,6 +311,21 @@ h4 {
   text-align: justify;
 }
 
+.skill-div {
+  margin-left: 25px;
+  display: flex;
+  gap: 5px;
+  flex-direction: row;
+  align-items: center;
+}
+
+.skill-icon {
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  margin: 0;
+}
+
 .section-title {
   margin-bottom: 25px;
   padding: 0 12px;
@@ -443,7 +458,6 @@ h4 {
 }
 
 .label {
-  margin-left: 20px;
   padding: 0;
 }
 
