--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -311,6 +311,14 @@ h4 {
   text-align: justify;
 }
 
+.aboutMes-p {
+  font-size: 16px;
+  margin: 0px;
+  padding: 0px;
+  line-height: 35px;
+  text-align: justify;
+}
+
 .skill-div {
   margin-left: 25px;
   display: flex;
