--- a/css/DesktopView.css
+++ b/css/DesktopView.css
@@ -132,6 +132,26 @@ p {
   font-size: 13px;
 }
 
+.span {
+  padding: 4px;
+  border-radius: 5px;
+  border: 1px solid #f2f2f2;
+  background-color: #f2f2f2;
+  font-size: small;
+  text-align: center;
+}
+
+.span:hover {
+  cursor: pointer;
+  transition-duration: 0.4s;
+  font-weight: bolder;
+}
+
+.span-link {
+  text-decoration: none;
+  color: black;
+}
+
 .header-container {
   display: flex;
   width: 100vw;
